CR 1: new feature- sortable table

--- a/cakupan/build.xml
+++ b/cakupan/build.xml
@@ -69,7 +69,7 @@
     
 	<target name="copypropfiles" description="copy xtra files to classes">
         <copy todir="${classes.dir}">
-             <fileset dir="${src.dir}" includes="**/*.css,**/*.properties,**/*.xsl" />
+             <fileset dir="${src.dir}" includes="**/*.css,**/*.png,**/*.js,**/*.properties,**/*.xsl" />
          </copy>
     </target>
 
