--- a/cakupan/build.xml
+++ b/cakupan/build.xml
@@ -34,6 +34,7 @@
         <pathelement location="${lib.dir}/xstream-1.2.2.jar" />
         <pathelement location="${lib.dir}/xpp3-1.1.4c.jar" />
         <pathelement location="${lib.dir}/saxon9.jar" />
+        <pathelement location="${lib.dir}/xalan-2.6.0.jar" />
         <!--pathelement location="lib/${ant.test.lib}" /-->
      </path>
 
