--- a/cakupan/src/cakupantasks.properties
+++ b/cakupan/src/cakupantasks.properties
@@ -1,3 +1,4 @@
 cakupan-instrument=com.cakupan.xslt.ant.InstrumentTask
 cakupan-merge=com.cakupan.xslt.ant.MergeTask
 cakupan-report=com.cakupan.xslt.ant.ReportTask
+cakupan-emma-report=com.cakupan.xslt.ant.EmmaReportTask
